# bg-remover

./: .gitignore  Dockerfile  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
.github/workflows_disabled/: test.yml  windows-test.yml
bg_remover/: __init__.py
bg_remover/cli/: __init__.py  main.py
bg_remover/config/: __init__.py  default.yaml  manager.py
bg_remover/core/: __init__.py  monitor.py  processor.py  statistics.py
bg_remover/models/: __init__.py  base.py  factory.py  rembg_model.py  sam_model.py  transparent_bg.py
bg_remover/utils/: __init__.py  device_utils.py  file_utils.py  logging_setup.py
scripts/: install_linux.sh  install_windows.bat  setup_dev.py
tests/: __init__.py  test_config.py  test_models.py  test_processor.py  test_utils.py
